--- a/tests/assets/scripts/tests.html
+++ b/tests/assets/scripts/tests.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
 <script type="text/javascript" src="../../../assets/scripts/jquery.metadata-3640.js"></script>
 <script type="text/javascript" src="../../../assets/scripts/jquery.cookie-1.27.2011.js"></script>
-<script type="text/javascript" src="../../../assets/scripts/admin_scripts.js"></script>
+<script type="text/javascript" src="../../../assets/scripts/scripts.js"></script>
 <script type="text/javascript" src="jquery-mockjax/jquery.mockjax.js"></script>
 <script type="text/javascript" src="jquery.hasEventListener/jquery.hasEventListener-2.0.3.min.js"></script>
 <script type="text/javascript" src="test_scripts.js"></script>
