--- a/tests/report/bookymark_application_models_bookmarks_model.php.html
+++ b/tests/report/bookymark_application_models_bookmarks_model.php.html
@@ -143,7 +143,7 @@
 <span class="lineNum" id="container4"><a name="4"></a><a href="#4" id="line4">       4</a> </span>                :  *                                                                               
 <span class="lineNum" id="container5"><a name="5"></a><a href="#5" id="line5">       5</a> </span>                :  * Description                                                                   
 <span class="lineNum" id="container6"><a name="6"></a><a href="#6" id="line6">       6</a> </span>                :  *                                                                               
-<span class="lineNum" id="container7"><a name="7"></a><a href="#7" id="line7">       7</a> </span>                :  * @license        Copyright Xulon Press, Inc. All Rights Reserved.              
+<span class="lineNum" id="container7"><a name="7"></a><a href="#7" id="line7">       7</a> </span>                :  * @license        Copyright Mike Funk. All Rights Reserved.              
 <span class="lineNum" id="container8"><a name="8"></a><a href="#8" id="line8">       8</a> </span>                :  * @author        Xulon Press                                                    
 <span class="lineNum" id="container9"><a name="9"></a><a href="#9" id="line9">       9</a> </span>                :  * @link        http://xulonpress.com                                            
 <span class="lineNum" id="container10"><a name="10"></a><a href="#10" id="line10">      10</a> </span>                :  * @email        info@xulonpress.com                                             
