--- a/tests/assets/scripts/tests.html
+++ b/tests/assets/scripts/tests.html
@@ -3,8 +3,10 @@
 <html>
 <head>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
-<script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
+<!--<link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />-->
+<link rel="stylesheet" href="qunit/qunit/qunit.css" type="text/css" media="screen" />
+<!--<script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>-->
+<script type="text/javascript" src="qunit/qunit/qunit.js"></script>
 <script type="text/javascript" src="../../../assets/scripts/jquery.metadata-3640.js"></script>
 <script type="text/javascript" src="../../../assets/scripts/jquery.cookie-1.27.2011.js"></script>
 <script type="text/javascript" src="../../../assets/scripts/scripts.js"></script>
